--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,6 +1,3 @@
-.container {
-}
-
 .header {
 	position: fixed;
 	background-color: $header-color;
@@ -28,9 +25,97 @@
 			color: $primary-color;
 			text-decoration: none;
 			font-weight: 500;
+			font-size: 14px;
 			&_orange {
 				color: $secondary-color;
 			}
 		}
+	}
+}
+// burger
+.header__burger {
+	display: none;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 30px;
+	height: 20px;
+	cursor: pointer;
+}
+
+.header__burger-bar {
+	width: 100%;
+	height: 2px;
+	background-color: $secondary-color;
+}
+
+.active .header__burger-bar {
+	transition: all 0.2s ease-in-out;
+}
+
+.active .header__burger-bar:first-child {
+	display: none;
+}
+.active .header__burger-bar:nth-child(2) {
+	transform: rotate(45deg) translateX(1px) translateY(13px);
+}
+.active .header__burger-bar:nth-child(3) {
+	transform: rotate(-45deg) translateY(-11px);
+	/* transform: translateY(-8px); */
+}
+
+.header__nav-mobile {
+	height: 100vh;
+	display: none;
+	padding-top: 42px;
+	padding: 14px 20px;
+}
+
+.header__nav-mobile.show {
+	display: flex;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 60px;
+	left: 0;
+	background-color: $header-color;
+}
+.header__menu-mobile {
+	list-style: none;
+}
+
+.header__menu-mobile-item + .header__menu-mobile-item {
+	margin-top: 21px;
+}
+
+.header__menu-mobile-link {
+	color: $primary-color;
+	text-decoration: none;
+}
+.header__menu-link:hover {
+	color: $secondary-color;
+	transition: all 0.2s ease-in-out;
+}
+// /burger
+@media (max-width: 1100px) {
+	.header__menu {
+		column-gap: 15px;
+	}
+	.header__menu-navigation {
+		display: none;
+	}
+	.header__burger {
+		display: flex;
+	}
+}
+
+@media (max-width: 530px) {
+	.header__menu-link_orange {
+		display: none;
+	}
+}
+
+@media (max-width: 320px) {
+	.header__menu {
+		display: none;
 	}
 }
