--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -40,13 +40,21 @@
 	width: 30px;
 	height: 20px;
 	cursor: pointer;
+	&-bar {
+		width: 100%;
+		height: 2px;
+		background-color: $secondary-color;
+	}
+	// &active {
+	// 	transition: all 0.2s ease-in-out;
+	// }
 }
 
-.header__burger-bar {
-	width: 100%;
-	height: 2px;
-	background-color: $secondary-color;
-}
+// .header__burger-bar {
+// 	width: 100%;
+// 	height: 2px;
+// 	background-color: $secondary-color;
+// }
 
 .active .header__burger-bar {
 	transition: all 0.2s ease-in-out;
@@ -68,29 +76,46 @@
 	display: none;
 	padding-top: 42px;
 	padding: 14px 20px;
+	&.show {
+		display: flex;
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		top: 60px;
+		left: 0;
+		background-color: $header-color;
+	}
 }
 
-.header__nav-mobile.show {
-	display: flex;
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	top: 60px;
-	left: 0;
-	background-color: $header-color;
-}
+// .header__nav-mobile.show {
+// 	display: flex;
+// 	position: fixed;
+// 	width: 100%;
+// 	height: 100%;
+// 	top: 60px;
+// 	left: 0;
+// 	background-color: $header-color;
+// }
 .header__menu-mobile {
 	list-style: none;
+	&-link {
+		color: $primary-color;
+		text-decoration: none;
+	}
+	// &:hover {
+	// 	color: $secondary-color;
+	// 	transition: all 0.2s ease-in-out;
+	// }
 }
 
 .header__menu-mobile-item + .header__menu-mobile-item {
 	margin-top: 21px;
 }
 
-.header__menu-mobile-link {
-	color: $primary-color;
-	text-decoration: none;
-}
+// .header__menu-mobile-link {
+// 	color: $primary-color;
+// 	text-decoration: none;
+// }
 .header__menu-link:hover {
 	color: $secondary-color;
 	transition: all 0.2s ease-in-out;
