--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -45,7 +45,7 @@
 		height: 2px;
 		background-color: $secondary-color;
 	}
-	// &active {
+	// &:active {
 	// 	transition: all 0.2s ease-in-out;
 	// }
 }
