--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,5 @@
 @import 'variables.scss';
-@import './base.scss';
-@import './mixins.scss';
-@import './fonts.scss';
-@import './header.scss';
+@import 'base.scss';
+@import 'mixins.scss';
+@import 'fonts.scss';
+@import 'header.scss';
