--- a/src/scss/hero-section.scss
+++ b/src/scss/hero-section.scss
@@ -1,4 +1,5 @@
 .hero__inner {
+	padding: 20px;
 }
 .container {
 }
@@ -41,10 +42,20 @@
 	background-color: #fff;
 	border-radius: 50px;
 }
+
+.hero__content {
+	position: relative;
+	display: block;
+}
+
 .hero__content-images {
 	border-radius: 30px;
 	margin-top: 20px;
+
+	// max-width: 1200px;
+	width: 100%;
 }
+
 .hero__content-about {
 	max-width: 452px;
 	padding: 34px;
@@ -52,6 +63,10 @@
 	border-radius: 20px;
 	backdrop-filter: blur(5px);
 	border: 1px solid rgba(244, 246, 250, 0.23);
+
+	position: absolute;
+	bottom: 0;
+	left: 0;
 }
 .hero__content-about-title {
 	font-weight: 700;
@@ -61,3 +76,50 @@
 	font-weight: 600;
 	font-size: 18px;
 }
+
+@media (max-width: 1100px) {
+	.hero__content-about-title {
+		font-size: 38px;
+	}
+	.hero__content-about-description {
+		font-size: 16px;
+	}
+}
+@media (max-width: 768px) {
+	.hero__content {
+		display: flex;
+		flex-direction: column-reverse;
+	}
+	.hero__content-about {
+		position: static;
+		background-color: transparent;
+		border: none;
+		padding: 0;
+		max-width: none;
+	}
+	.hero__content-about-title {
+		font-size: 40px;
+		padding-bottom: 6px;
+	}
+	.hero__content-about-description {
+		font-size: 16px;
+		font-weight: 500;
+	}
+}
+@media (max-width: 400px) {
+	.hero__content-about-title {
+		font-size: 32px;
+		padding-bottom: 6px;
+	}
+	.hero__content-about-description {
+		font-size: 14px;
+	}
+	.hero__nav-location-contry {
+		margin-right: 10px;
+		font-size: 12px;
+	}
+	.hero__nav-btn {
+		font-size: 12px;
+	}
+}
+// xuy
