--- a/src/scss/second-section.scss
+++ b/src/scss/second-section.scss
@@ -1,22 +1,91 @@
+.container {
+	padding: 14px 20px;
+}
 .second {
 	margin-top: 60px;
 }
+
+.second__content {
+	justify-content: space-between;
+	display: flex;
+}
+
+.second__content-buttons {
+	display: flex;
+	column-gap: 12px;
+}
+.second__content-buttons-button {
+	@include button(7px 15px, $primary-color, #464646);
+}
+
+.search-bar {
+	max-width: 580px;
+	// width: 100%;`
+	background-color: #464646;
+	display: flex;
+	align-items: center;
+	border-radius: 50px;
+	// padding: 10px;
+	border: 1px solid #fff;
+}
+.search-bar input {
+	background-color: transparent;
+	flex: 1;
+	border: 0;
+	outline: none;
+	padding: 7px 12px;
+	color: $primary-color;
+}
+::placeholder {
+	color: transparent;
+	color: #fff;
+	// font-size: 16px;
+}
+.search-bar button img {
+}
+.search-bar button {
+	border: 0;
+	background-color: transparent;
+}
+// slider
 .swiper {
-	border-radius: 77px;
+	// border-radius: 77px;
 }
 .swiper-slide {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
 }
 .swiper-slide img {
 	object-fit: cover;
-	border-radius: 76px;
+	border-radius: 20px;
+	// width: 250px;
 }
 
 .swiper-pagination {
+	// background-color: $primary-color;
 }
 
 .swiper-pagination-bullet-active {
-	background: $primary-color;
+	background: $secondary-color;
 }
+//
+.swiper-slide__about {
+}
+.swiper-slide__about-name {
+	font-size: 18px;
+}
+.swiper-slide__about-about {
+	font-size: 14px;
+	font-weight: 400;
+	color: rgba(227, 227, 227, 0.6);
+}
+.swiper-slide__about-about-price {
+	font-size: 22px;
+	font-weight: 700;
+}
+.swiper-slide__about-btn {
+	@include button(7px 15px, $primary-color, $secondary-color);
+}
+// /slider
