--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -4,3 +4,10 @@
 	background-color: $background-color;
 	padding: $padding;
 }
+
+@mixin mobile-link($primary-color) {
+	color: $primary-color;
+	text-decoration: none;
+	font-weight: 500;
+	font-size: 14px;
+}
