--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,3 +3,12 @@ $header-color: #1d1d20;
 $primary-color: #fff;
 $secondary-color: #ff6b17;
 $button-bg: #464646;
+
+// breakpoints
+$laptop-l: 1440px;
+$laptop: 1024px;
+$tablet: 768px;
+$mobile-l: 425px;
+$mobile-m: 375px;
+$mobile-s: 320px;
+// /breakpoints
