fix: header s size

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -5,7 +5,7 @@
 }
 .page {
 	background-color: #272727;
-	font-family: 'Inter', sans-serif;
+	font-family: $primary-font;
 	color: $primary-color;
 }
 .container {
