--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,6 +3,7 @@ $header-color: #1d1d20;
 $primary-color: #fff;
 $secondary-color: #ff6b17;
 $button-bg: #464646;
+$primary-font: 'Inter', sans-serif;
 
 // breakpoints
 $laptop-l: 1440px;
