--- a/src/scss/fetchProducts.scss
+++ b/src/scss/fetchProducts.scss
@@ -27,10 +27,13 @@ p {
 
 .swiper-slide__about {
 	margin: 10px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	/* column-gap: 16px; */
+	row-gap: 10px;
+	align-items: center;
 }
 
-.swiper-slide__about {
-}
 .swiper-slide__about-name {
 	font-size: 18px;
 }
