--- a/src/scss/second-section.scss
+++ b/src/scss/second-section.scss
@@ -71,21 +71,21 @@
 	background: $secondary-color;
 }
 //
-.swiper-slide__about {
-}
-.swiper-slide__about-name {
-	font-size: 18px;
-}
-.swiper-slide__about-about {
-	font-size: 14px;
-	font-weight: 400;
-	color: rgba(227, 227, 227, 0.6);
-}
-.swiper-slide__about-about-price {
-	font-size: 22px;
-	font-weight: 700;
-}
-.swiper-slide__about-btn {
-	@include button(7px 15px, $primary-color, $secondary-color);
-}
+// .swiper-slide__about {
+// }
+// .swiper-slide__about-name {
+// 	font-size: 18px;
+// }
+// .swiper-slide__about-about {
+// 	font-size: 14px;
+// 	font-weight: 400;
+// 	color: rgba(227, 227, 227, 0.6);
+// }
+// .swiper-slide__about-about-price {
+// 	font-size: 22px;
+// 	font-weight: 700;
+// }
+// .swiper-slide__about-btn {
+// 	@include button(7px 15px, $primary-color, $secondary-color);
+// }
 // /slider
