--- a/src/scss/hero-section.scss
+++ b/src/scss/hero-section.scss
@@ -21,7 +21,7 @@
 	&-flag {
 		margin-right: 8px;
 	}
-	&-contry {
+	&-city {
 		margin-right: 20px;
 	}
 }
@@ -103,7 +103,7 @@
 	.hero__nav-location-flag {
 		margin-right: 2px;
 	}
-	.hero__nav-location-contry {
+	.hero__nav-location-city {
 		margin-right: 10px;
 		font-size: 12px;
 	}
