feat: adaptive $mobile-m

--- a/src/scss/second-sections.scss
+++ b/src/scss/second-sections.scss
@@ -79,7 +79,9 @@
 .swiper-slide {
 	color: rgba(227, 227, 227, 0.6);
 	// background-color: #464646;
-	max-width: 250px;
+	max-width: 266px;
+	border-radius: 20px;
+	background-color: #464646;
 }
 .swiper-slide__link {
 	text-decoration: none;
@@ -87,6 +89,7 @@
 }
 .swiper-slide__image {
 	border-radius: 20px;
+	width: 266px;
 	// z-index: -1;
 }
 .swiper-slide__about {
@@ -162,5 +165,12 @@
 	}
 	.search-bar {
 		display: flex;
+	}
+}
+@media (max-width: 375px) {
+	.fourth__btn {
+		display: block;
+		margin-top: 20px;
+		text-align: center;
 	}
 }
