--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -4,7 +4,7 @@
 	box-sizing: border-box;
 }
 .page {
-	background-color: #272727;
+	background-color: $bg-color;
 	font-family: $primary-font;
 	color: $primary-color;
 }
