--- a/src/scss/second-sections.scss
+++ b/src/scss/second-sections.scss
@@ -35,7 +35,6 @@
 	display: flex;
 	align-items: center;
 	border-radius: 50px;
-	// padding: 10px;
 	border: 1px solid $primary-color;
 }
 .search-bar input {
@@ -77,7 +76,7 @@
 }
 .swiper-slide__about {
 	color: $primary-color;
-	background-color: #464646;
+	background-color: $button-bg;
 	max-width: 250px;
 	border-radius: 20px;
 	margin: 10px;
@@ -121,11 +120,14 @@
 	background: coral;
 }
 // свайпер закончился
-.fourth__btn {
+.more__btn {
 	@include button($secondary-color, #ffe9dc, 10px 30px);
 	text-decoration: none;
-	padding-top: 10px;
+	margin-top: 40px;
+	display: inline-block;
+	float: inline-end;
 }
+
 // media
 @media (max-width: $laptop) {
 	.second {
@@ -154,6 +156,11 @@
 	.search-bar input {
 		max-width: 120px;
 	}
+	.more__btn {
+		display: block;
+		float: none;
+		text-align: center;
+	}
 }
 @media (max-width: $mobile-s) {
 	.search-bar {
@@ -168,10 +175,5 @@
 	}
 	.second__content-buttons {
 		column-gap: 10px;
-	}
-	.fourth__btn {
-		display: block;
-		margin-top: 20px;
-		text-align: center;
 	}
 }
