--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -9,8 +9,16 @@
 
 @mixin text-body($font-size, $font-weight) {
 	font-size: $font-size;
-	text-decoration: none;
-
 	font-weight: $font-weight;
+	text-decoration: none;
 	color: $primary-color;
 }
+
+// @mixin text-body($font-size, $font-weight) {
+// 	font-family: 'Satoshi', sans-serif;
+// 	font-size: $font-size;
+// 	text-decoration: none;
+
+// 	font-weight: $font-weight;
+// 	color: #000;
+// }
