--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -10,3 +10,10 @@
 	font-weight: 700;
 	font-size: $font-size;
 }
+
+@mixin text-body($font-size, $font-weight) {
+	font-size: $font-size;
+	font-weight: $font-weight;
+	text-decoration: none;
+	color: $primary-color;
+}
