--- a/src/scss/second-sections.scss
+++ b/src/scss/second-sections.scss
@@ -119,7 +119,7 @@
 	background-color: $pagination-color;
 }
 // свайпер закончился
-.swiper__more-btn {
+.second__more-btn {
 	@include button($secondary-color, #ffe9dc, 10px 30px);
 	text-decoration: none;
 	margin-top: 40px;
@@ -155,7 +155,7 @@
 	.search-bar input {
 		max-width: 120px;
 	}
-	.swiper__more-btn {
+	.second__more-btn {
 		display: block;
 		float: none;
 		text-align: center;
