feat: footer done

--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -3,6 +3,7 @@
 	color: $color;
 	background-color: $background-color;
 	padding: $padding;
+	text-decoration: none;
 	// font-size: $font-size;
 	// можно подумать о том чтобы в миксин с кнопкой добавить размер шрифта
 }
