--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -21,15 +21,15 @@
 	border-radius: 20px;
 	color: wheat;
 	background-color: $button-bg;
-	border: 1px solid;
+	border: 0px solid;
 
 	max-width: 350px;
 	width: 100%;
 }
 
 .footer__content-button {
-	@include button($primary-color, $secondary-color, 10px 30px);
-	margin-left: -160px;
+	@include button($primary-color, $secondary-color, 7px 30px 10px);
+	margin-left: -168px;
 }
 
 .footer__content-social {
