--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,4 +5,4 @@
 @import 'header.scss';
 @import 'hero-section.scss';
 @import 'second-sections.scss';
-@import './third-section.scss';
+@import 'third-section.scss';
