add; html strucrure 'fourth-sec'

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,4 +5,5 @@
 @import 'header.scss';
 @import 'hero-section.scss';
 @import 'second-sections.scss';
+@import 'fourth.scss';
 @import 'footer.scss';
