feat: third section done

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,5 +5,6 @@
 @import 'header.scss';
 @import 'hero-section.scss';
 @import 'second-sections.scss';
+@import 'third.scss';
 @import 'fourth.scss';
 @import 'footer.scss';
