--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,4 +7,7 @@
 @import 'second-sections.scss';
 @import 'third.scss';
 @import 'fourth.scss';
+@import 'about.scss';
 @import 'footer.scss';
+//
+@import './card/card.scss';
