--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,47 +1,3 @@
-.footer {
-	width: 100%;
-	background-color: $header-color;
-	margin-top: 80px;
-	padding: 14px 20px;
-}
-.footer__content {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.footer__inner {
-}
-.footer__content-title {
-	@include text-body(16px, 400);
-	padding-bottom: 10px;
-}
-
-.footer__content-input {
-	padding: 10px;
-	border-radius: 20px;
-	color: wheat;
-	background-color: $button-bg;
-	border: 0px solid;
-
-	max-width: 350px;
-	width: 100%;
-}
-
-.footer__content-button {
-	@include button($primary-color, $secondary-color, 7px 30px 10px);
-	margin-left: -168px;
-}
-
-.footer__content-social {
-	list-style: none;
-}
-
-.bb {
-	display: flex;
-	align-items: center;
-	gap: 30px;
-}
-
 .header__menu-button-b {
 	@include button($secondary-color, $bg-color, 7px 16px);
 	margin-top: 5px;
@@ -52,8 +8,92 @@
 	display: flex;
 	align-items: center;
 	gap: 10px;
+	justify-content: center;
+	padding-top: 10px;
 }
 
-.aa {
-	display: inline-block;
+.footer {
+	width: 100%;
+	background-color: $header-color;
+	margin-top: 40px;
+	padding: 14px 20px;
+	&__content {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		&-under {
+			display: inline-block;
+		}
+		&-title {
+			@include text-body(16px, 400);
+			padding-bottom: 10px;
+		}
+		&-input {
+			padding: 10px;
+			border-radius: 20px;
+			color: wheat;
+			background-color: $button-bg;
+			border: 0px solid;
+
+			max-width: 350px;
+			width: 100%;
+		}
+		&-button {
+			@include button($primary-color, $secondary-color, 7px 30px 10px);
+			margin-left: -168px;
+		}
+		&-social {
+			list-style: none;
+			&-text {
+				text-align: center;
+			}
+		}
+		&-news {
+			align-items: center;
+			display: flex;
+			gap: 20px;
+		}
+	}
+}
+
+@media (max-width: $tablet) {
+	.footer__content {
+		grid-template-columns: 1fr;
+	}
+	.footer__content-news {
+		justify-content: center;
+	}
+
+	.footer__content-input {
+		width: 298px;
+	}
+	.footer__content-button {
+		margin-left: -110px;
+	}
+	.footer__content-social-text {
+		margin-top: 20px;
+	}
+}
+@media (max-width: 540px) {
+	.footer__image {
+		display: none;
+	}
+	.footer__content-button {
+		margin-left: -142px;
+	}
+}
+@media (max-width: $mobile-m) {
+	.footer__content-button {
+		z-index: 1;
+		position: absolute;
+		margin-left: -161px;
+	}
+}
+@media (max-width: $mobile-s) {
+	.footer__content-button {
+		margin-left: -132px;
+		padding: 7px 15px 9px;
+	}
+	.footer__content-input {
+		width: 250px;
+	}
 }
