--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -15,3 +15,24 @@
 
 	// padding: 0 20px;
 }
+/* Ширина скроллбара */
+::-webkit-scrollbar {
+	width: 10px;
+	height: 50px;
+}
+
+/* Дорожка скроллбара */
+::-webkit-scrollbar-track {
+	background: none;
+}
+
+/* Бегунок скроллбара */
+::-webkit-scrollbar-thumb {
+	background: $secondary-color;
+	border-radius: 5px;
+}
+
+/* Указатель наведения на скроллбар */
+::-webkit-scrollbar-thumb:hover {
+	background: #ff8c00;
+}
